--- a/frontend/.nais/prod.yaml
+++ b/frontend/.nais/prod.yaml
@@ -9,7 +9,11 @@ spec:
   image: {{image}}
   port: 3000
   ingresses:
+    - https://data.intern.nav.no
     - https://data.ansatt.nav.no
+  redirects:
+    - from: https://data.intern.nav.no
+      to: https://data.ansatt.nav.no
   accessPolicy:
     outbound:
       rules:
