--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/source-sans-pro": "^5.0.8",
     "@hookform/resolvers": "3.9.0",
+    "@lukemorales/query-key-factory": "^1.3.4",
     "@mui/lab": "^6.0.0-beta.8",
     "@mui/material": "^6.0.1",
     "@mui/x-tree-view": "^7.15.0",
