store metabase allusers sa creds as file in gha environment for test job

--- a/.github/workflows/build-and-deploy-backend.yml
+++ b/.github/workflows/build-and-deploy-backend.yml
@@ -125,6 +125,11 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
+      - id: store-metabase-test-credentials
+        if: ${{ inputs.notest != 'true' }}
+        env: 
+          METABASE_ALL_USERS_SA_CREDS_JSON: ${{ secrets.METABASE_ALL_USERS_SA_CREDS_JSON }}
+        run: echo $METABASE_ALL_USERS_SA_CREDS_JSON > tests-metabase-all-users-sa-creds.json
       - id: run-tests
         if: ${{ inputs.notest != 'true' }}
         run: make test
