--- a/.github/workflows/deploy-metabase.yaml
+++ b/.github/workflows/deploy-metabase.yaml
@@ -13,6 +13,13 @@ permissions:
   id-token: write
 
 jobs:
+  show-parameters:
+    name: Show parameters
+    runs-on: ubuntu-latest
+    steps:
+      - name: Show parameters
+        run: |
+          echo "deploy_env: ${{ github.event.inputs.deploy_env }}"
   deploy-dev:
     name: Deploy to dev-gcp
     runs-on: ubuntu-latest
