bug(datavarehus): add the missing json data

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ hack/.ipynb_checkpoints/
 !resources/metabase/fake/fake-metabase-sa.json
 !resources/naisconsole/fake-response.json
 !resources/teamkatalogen/fake-data.json
+!pkg/datavarehus/testdata/dmo_ops_tnsnames.json
 nada-backend
