feat(dvhmock): add dvh-mock and deploy dev
Co-authored-by: Paul B. Beskow <paul@beskow.no>

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ hack/.ipynb_checkpoints/
 !resources/naisconsole/fake-response.json
 !resources/teamkatalogen/fake-data.json
 !pkg/datavarehus/testdata/dmo_ops_tnsnames.json
+!resources/images/dvh-mock/dmo_ops_tnsnames.json
 nada-backend
