--- a/.nais/dev/nada-backend/gcp.yaml
+++ b/.nais/dev/nada-backend/gcp.yaml
@@ -56,6 +56,8 @@ spec:
       mountPath: /var/run/secrets/google-groups
     - secret: nada-backend-metabase-sa
       mountPath: /var/run/secrets/metabase
+    - secret: nada-backend-tns-name-map
+      mountPath: /home/nada/tns_name_map.json
   gcp:
     sqlInstances:
       - type: POSTGRES_12
@@ -82,6 +84,7 @@ spec:
     outbound:
       rules:
         - application: metabase
+        - application: dvh-mock
         - application: team-catalog-backend
           namespace: org
         - application: behandlingskatalog-backend
