--- a/.nais/dev/nada-backend/nada-backend-config.yaml
+++ b/.nais/dev/nada-backend/nada-backend-config.yaml
@@ -97,6 +97,10 @@ data:
       clusterID: knada
       artifact_repository_name: knast-images
       artifact_repository_project: knada-gcp
+    dvh:
+      host: http://dvh-mock.org.svc.cluster.local
+      client_id: "not_used"
+      client_secret: "not_valid"
     email_suffix: '@nav.no'
     keywords_admin_group: nada@nav.no
     all_users_group: group:all-users@nav.no
