--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -97,6 +97,13 @@ workstation:
   administrator_service_account: nada-backen-nada-23ow5ma@nais-dev-2e7b.iam.gserviceaccount.com
   artifact_repository_name: knast-images
   artifact_repository_project: knada-gcp
+onprem_mapping:
+  bucket: onprem-hostmap
+  mapping_file: onprem-firewall-map.yaml
+dvh:
+  host: http://localhost:8093
+  client_id: "client_id"
+  client_secret: "client_secret"
 email_suffix: '@nav.no'
 nais_cluster_name: dev-gcp
 keywords_admin_group: nada@nav.no
