--- a/pkg/config/v2/testdata/config.yaml
+++ b/pkg/config/v2/testdata/config.yaml
@@ -116,6 +116,13 @@ cloud_logging:
 artifact_registry:
     endpoint: http://localhost:8095
     disable_auth: true
+onprem_mapping:
+  bucket: mybucket
+  mapping_file: mapping.json
+dvh:
+  host: http://localhost:8096
+  client_id: client_id
+  client_secret: client_secret
 email_suffix: '@nav.no'
 nais_cluster_name: dev-gcp
 keywords_admin_group: nada@nav.no
