--- a/.nais/prod/nada-backend/nada-backend-config.yaml
+++ b/.nais/prod/nada-backend/nada-backend-config.yaml
@@ -97,6 +97,9 @@ data:
       administrator_service_account: nada-backen-nada-23ow5ma@nais-prod-020f.iam.gserviceaccount.com
       artifact_repository_name: knast-images
       artifact_repository_project: knada-gcp
+    onprem_mapping:
+      bucket: onprem-hostmap
+      mapping_file: onprem-firewall-map.yaml
     dvh:
       host: https://dvh.adeo.no
       client_id: # Loaded from env var NADA_DVH_CLIENT_ID
