--- a/.nais/dev/nada-backend/nada-backend-config.yaml
+++ b/.nais/dev/nada-backend/nada-backend-config.yaml
@@ -97,6 +97,7 @@ data:
       clusterID: knada
       artifact_repository_name: knast-images
       artifact_repository_project: knada-gcp
+      signer_service_account: dvh-jwt-signer@knada-gcp.iam.gserviceaccount.com
     onprem_mapping:
       bucket: onprem-hostmap
       mapping_file: onprem-firewall-map.yaml
