--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,7 @@
     "react-hook-form": "^7.53.2",
     "react-intersection-observer": "^9.13.1",
     "react-markdown": "^9.0.1",
-    "react-query": "^3.39.3",
+    "@tanstack/react-query": "^5.65.1",
     "react-select": "^5.10.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
