chore(frontend): make workstations ok

--- a/resources/images/dvh-mock/nginx.conf
+++ b/resources/images/dvh-mock/nginx.conf
@@ -9,16 +9,17 @@ server {
     }
 
     # Mock endpoint for SendJWT
-    location /api/send_jwt {
+    location /ords/dvh/dvh_dmo/wli_rest/notify {
         default_type application/json;
         return 200 '{"status": "success"}';
     }
 
     # Mock endpoint for token exchange
-    location /api/token {
+    location /ords/dvh/oauth/token {
         default_type application/json;
         return 200 '{
             "access_token": "mock_access_token",
+            "token_type": "bearer",
             "expires_in": 3600
         }';
     }
