chore(gar): cache image fetching from artifact registry

--- a/.nais/dev/nada-backend/nada-backend-config.yaml
+++ b/.nais/dev/nada-backend/nada-backend-config.yaml
@@ -116,3 +116,5 @@ data:
     debug: false
     story_create_ignore_missing_team: true
     log_level: info
+    artifact_registry:
+      cache_duration_seconds: 600
