--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -100,7 +100,7 @@ workstation:
   administrator_service_account: nada-backen-nada-23ow5ma@nais-dev-2e7b.iam.gserviceaccount.com
   artifact_repository_name: knast-images
   artifact_repository_project: knada-gcp
-  signer_service_account: dvh-jwt-signer@knada-gcp.iam.gserviceaccount.com
+  signer_service_account: dvh-jwt-signer@knada-dev.iam.gserviceaccount.com
 onprem_mapping:
   bucket: onprem-hostmap
   mapping_file: onprem-firewall-map.yaml
