--- a/config-local.yaml
+++ b/config-local.yaml
@@ -106,6 +106,7 @@ workstation:
   administrator_service_account: test@test.iam.gserviceaccount.com
   artifact_repository_name: knast-images
   artifact_repository_project: knada-gcp
+  machine_cost_cache_duration_seconds: 86400
 secure_web_proxy:
   endpoint: http://localhost:8091
   disable_auth: true
