feat(cloudstorage): detect mimetype

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@ hack/.ipynb_checkpoints/
 !resources/naisconsole/fake-response.json
 !resources/teamkatalogen/fake-data.json
 !pkg/datavarehus/testdata/dmo_ops_tnsnames.json
+!pkg/cloudstorage/testdata/tux.json
 !resources/images/dvh-mock/dmo_ops_tnsnames.json
 nada-backend
