--- a/.github/workflows/deploy-metabase.yaml
+++ b/.github/workflows/deploy-metabase.yaml
@@ -1,6 +1,7 @@
 name: For call - deploy metabase
 
 on:
+  push:
   workflow_call:
     inputs:
       deploy_env:
@@ -44,6 +45,7 @@ jobs:
           project_id: ${{ inputs.project_id }}
           image_suffix: metabase
           dockerfile: ./resources/images/metabase/Dockerfile
+          docker_context: .
           build_args: |
             METABASE_VERSION=${{ steps.read_metabase_version.outputs.METABASE_VERSION }}
 
