test log step output

--- a/.github/workflows/deploy-metabase.yaml
+++ b/.github/workflows/deploy-metabase.yaml
@@ -36,6 +36,8 @@ jobs:
       - name: Read Metabase Version
         id: read_metabase_version
         run: echo "METABASE_VERSION=$(cat .metabase_version)" >> $GITHUB_ENV
+      - name: test
+        run: echo ${{ steps.read_metabase_version.outputs.METABASE_VERSION }}
       - name: Push docker image to GAR
         uses: nais/docker-build-push@v0
         id: docker-build-push
