chore(cloudstorage): use fake-gcs-server for all locally so we only need one cloudstorage client

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ hack/.ipynb_checkpoints/
 !pkg/cloudstorage/testdata/tux.json
 !resources/images/dvh-mock/dmo_ops_tnsnames.json
 nada-backend
+onprem-firewall-map.yaml
