--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,15 @@ services:
       - metanet1
 
   gcs:
-    image: fsouza/fake-gcs-server:1.44
+    image: fsouza/fake-gcs-server:1.52.2
     restart: always
     ports:
       - "8082:4443"
-    entrypoint: ["/bin/sh", "-c", "mkdir -p /storage/nada-quarto-storage-dev && /bin/fake-gcs-server -scheme http -public-host localhost:8082"]
+    entrypoint: ["/bin/sh", "-c", "mkdir -p /data/nada-quarto-storage-dev && /bin/fake-gcs-server -scheme http -public-host localhost:8082 -data /data"]
     networks:
       - metanet1
+    volumes:
+      - ./resources/gcs:/data/onprem-hostmap
 
   smtp4dev:
     image: rnwood/smtp4dev:v3
