--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -8,6 +8,7 @@ google:
     client_secret: # Loaded from env var NADA_GOOGLE_CLIENT_SECRET
     tenant_id: 
     redirect_url: http://localhost:8080/api/googleOauth2/callback  
+    hmac_key: # Loaded from env var NADA_GOOGLE_HMAC_KEY
 metabase:
   username: nada@nav.no
   password: superdupersecret1
