--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@navikt/ds-css-internal": "^3.4.3",
     "@navikt/ds-react": "^7.16.0",
     "@navikt/ds-tailwind": "^7.16.0",
+    "@navikt/ds-tokens": "^7.17.3",
     "@next/bundle-analyzer": "^15.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.65.1",
