--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,19 +18,17 @@
     "@fontsource/source-sans-pro": "^5.1.0",
     "@hookform/resolvers": "3.9.1",
     "@lukemorales/query-key-factory": "^1.3.4",
-    "@mui/lab": "^6.0.0-beta.30",
+    "@mui/lab": "^6.0.0-beta.17",
     "@mui/material": "^6.0.1",
-    "@mui/x-tree-view": "^7.26.0",
-    "@navikt/aksel": "^7.16.0",
-    "@navikt/aksel-icons": "^7.16.0",
-    "@navikt/ds-css": "^7.16.0",
+    "@mui/x-tree-view": "^7.23.0",
+    "@navikt/aksel": "^7.6.0",
+    "@navikt/aksel-icons": "^7.6.0",
+    "@navikt/ds-css": "^7.6.0",
     "@navikt/ds-css-internal": "^3.4.3",
-    "@navikt/ds-react": "^7.16.0",
-    "@navikt/ds-tailwind": "^7.16.0",
-    "@navikt/ds-tokens": "^7.17.3",
+    "@navikt/ds-react": "^7.6.0",
+    "@navikt/ds-tailwind": "^7.6.0",
     "@next/bundle-analyzer": "^15.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tanstack/react-query": "^5.65.1",
     "@uiw/react-md-editor": "^4.0.4",
     "amplitude-js": "^8.21.9",
     "classnames": "^2.5.1",
@@ -45,6 +43,7 @@
     "react-hook-form": "^7.53.2",
     "react-intersection-observer": "^9.13.1",
     "react-markdown": "^9.0.1",
+    "@tanstack/react-query": "^5.65.1",
     "react-select": "^5.10.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
@@ -58,12 +57,12 @@
     "@storybook/nextjs": "^8.5.3",
     "@storybook/react": "^8.5.3",
     "@storybook/test": "^8.5.3",
-    "@tailwindcss/postcss": "^4.0.0",
     "@types/amplitude-js": "^8.16.5",
     "@types/lodash": "^4.17.13",
     "@types/react": "18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
+    "autoprefixer": "^10.4.20",
     "cookie": "^1.0.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.0.3",
@@ -72,7 +71,7 @@
     "prettier": "^3.4.2",
     "storybook": "^8.4.2",
     "storybook-react-context": "^0.7.0",
-    "tailwindcss": "^4.0.12",
+    "tailwindcss": "^3.4.16",
     "typescript": "5.7.2"
   },
   "prettier": {
