--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -28,13 +28,19 @@ jobs:
         run: |
           echo "environment: ${{ inputs.deploy_env }}"
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: '22.x'
           registry-url: https://npm.pkg.github.com/
           scope: '@navikt'
         env:
           NPM_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
+      - name: npm install
+        working-directory: frontend
+        run: npm install
+      - name: npm build
+        working-directory: frontend
+        run: npm run build      
       - name: Push docker image to GAR
         uses: nais/docker-build-push@v0
         id: docker-build-push
