--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -27,20 +27,13 @@ jobs:
       - name: Show parameters
         run: |
           echo "environment: ${{ inputs.deploy_env }}"
-      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '22.x'
-          registry-url: https://npm.pkg.github.com/
-          scope: '@navikt'
-        env:
-          NPM_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
-      - name: npm install
-        working-directory: frontend
-        run: npm install
+            node-version: 20
+            registry-url: "https://npm.pkg.github.com"
       - run: npm ci
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}          
+          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
       - name: npm build
         working-directory: frontend
         run: npm run build      
