--- a/frontend/.npmrc
+++ b/frontend/.npmrc
@@ -1,2 +1,2 @@
+//npm.pkg.github.com/:_authToken=TOKEN
 @navikt:registry=https://npm.pkg.github.com
-npm.pkg.github.com/:_authToken=${NPM_AUTH_TOKEN}
