--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Show parameters
         run: |
           echo "environment: ${{ inputs.deploy_env }}"
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v4
         with:
             node-version: 20
