--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           echo "environment: ${{ inputs.deploy_env }}"
       - uses: actions/checkout@v3
+      - run: cd frontend
       - uses: actions/setup-node@v4
         with:
             node-version: 20
