--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -28,7 +28,6 @@ jobs:
         run: |
           echo "environment: ${{ inputs.deploy_env }}"
       - uses: actions/checkout@v3
-      - run: cd frontend
       - uses: actions/setup-node@v4
         with:
             node-version: 22
@@ -36,6 +35,7 @@ jobs:
       - run: npm ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
+        working-directory: frontend
       - name: npm build
         working-directory: frontend
         run: npm run build      
