--- a/.nais/dev/nada-backend/nada-backend-config.yaml
+++ b/.nais/dev/nada-backend/nada-backend-config.yaml
@@ -39,6 +39,7 @@ data:
     slack:
       webhook_url: # Loaded from env var NADA_SLACK_WEBHOOK_URL
       token: # Loaded from env var NADA_SLACK_TOKEN
+      channel_override: "#nada-test"
     server:
       hostname: data.ansatt.dev.nav.no
       address: 0.0.0.0
