change version of tailwind

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "@navikt/ds-css": "^7.16.0",
     "@navikt/ds-css-internal": "^3.4.3",
     "@navikt/ds-react": "^7.16.0",
-    "@navikt/ds-tailwind": "^7.16.0",
+    "@navikt/ds-tailwind": "latest",
     "@navikt/ds-tokens": "^7.17.3",
     "@next/bundle-analyzer": "^15.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
