--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -34,8 +34,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          registry-url: https://npm.pkg.github.com/
+          node-version: "22.14.0"
+          cache: "npm"
+          registry-url: "https://npm.pkg.github.com"
           scope: '@navikt'
     
       - name: Install dependencies
