--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -40,7 +40,7 @@ jobs:
     
       - name: Install dependencies
         working-directory: frontend
-        run: npm install
+        run: npm install --include=optional sharp
         env:
           NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
     
