--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,10 @@
     "sharp": "^0.33.5",
     "yup": "^1.5.0"
   },
+  "optionalDependencies": {
+    "@tailwindcss/oxide-linux-x64-gnu": "latest",
+    "lightningcss-linux-x64-gnu": "latest"
+  },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
     "@storybook/addon-essentials": "^8.5.3",
