chore(codecov): add token

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -45,3 +45,4 @@ jobs:
           file: ./coverage.txt
           fail_ci_if_error: false
           verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
