--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Run tests with coverage
         run: make cover
+        env:
+          RIVER_PRO_SECRET: ${{ secrets.RIVER_PRO_SECRET }}
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
