--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -56,6 +56,7 @@ jobs:
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           docker_context: frontend
           project_id: ${{ inputs.project_id }}
+          build_secrets: NODE_AUTH_TOKEN=${{ secrets.READER_TOKEN }}          
           build_args: 
             NODE_AUTH_TOKEN=${{secrets.READER_TOKEN}}
           image_suffix: frontend
