--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,7 +53,8 @@
   "optionalDependencies": {
     "@tailwindcss/oxide-linux-x64-gnu": "latest",
     "@tailwindcss/oxide-linux-x64-musl": "latest",
-    "lightningcss-linux-x64-gnu": "latest"
+    "lightningcss-linux-x64-gnu": "latest",
+    "sharp": "latest"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
