--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,14 +47,13 @@
     "react-markdown": "^9.0.1",
     "react-select": "^5.10.0",
     "remark-gfm": "^4.0.0",
-    "sharp": "^0.33.5",
     "yup": "^1.5.0"
   },
   "optionalDependencies": {
     "@tailwindcss/oxide-linux-x64-gnu": "latest",
     "@tailwindcss/oxide-linux-x64-musl": "latest",
     "lightningcss-linux-x64-gnu": "latest",
-    "sharp": "latest"
+    "@img/sharp-linuxmusl-x64": "latest"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
