--- a/.nais/prod/nada-backend/gcp.yaml
+++ b/.nais/prod/nada-backend/gcp.yaml
@@ -4,7 +4,9 @@ metadata:
   name: nada-backend
   namespace: nada
   annotations:
-    nginx.ingress.kubernetes.io/proxy-body-size: 300M
+    nginx.ingress.kubernetes.io/proxy-body-size: 100M
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
   labels:
     team: nada
 spec:
