--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,11 +11,9 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "docker"
-    directory: "/frontend"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "docker"
-    directory: "/resources/images"
+    directories: 
+      - "/frontend"
+      - "/resources/images/nada-backend"
     schedule:
       interval: "weekly"
   - package-ecosystem: "github-actions"
