--- a/.nais/prod/nada-backend/nada-backend-config.yaml
+++ b/.nais/prod/nada-backend/nada-backend-config.yaml
@@ -25,6 +25,11 @@ data:
       databases_base_url: https://metabase.ansatt.nav.no/browse/databases
       mapping_deadline_sec: 600 # 10 minutes
       mapping_frequency_sec: 600 # 10 minutes
+      kms:
+        project: nada-prod-6977
+        location: europe-north1
+        keyring: datamarkedsplassen
+        key_namee: sa-key-encrypter
     cross_team_pseudonymization:
       gcp_project_id: datamarkedsplassen
       gcp_region: europe-north1
