--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -18,6 +18,11 @@ metabase:
   databases_base_url: http://localhost:8083/browse/databases
   mapping_deadline_sec: 600 # 10 minutes
   mapping_frequency_sec: 600 # 10 minutes
+  kms:
+    project: nada-dev-db2e
+    location: europe-north1
+    keyring: datamarkedsplassen
+    key_name: sa-key-encrypter
 cross_team_pseudonymization:
   gcp_project_id: datamarkedsplassen-dev
   gcp_region: europe-north1
