--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "@navikt/ds-css-internal": "^3.4.3",
     "@navikt/ds-react": "^7.16.0",
     "@navikt/ds-tailwind": "latest",
-    "@navikt/ds-tokens": "^7.20.0",
+    "@navikt/ds-tokens": "^7.22.0",
     "@next/bundle-analyzer": "^15.3.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.74.4",
@@ -47,10 +47,10 @@
     "yup": "^1.6.1"
   },
   "optionalDependencies": {
+    "@img/sharp-linuxmusl-x64": "latest",
     "@tailwindcss/oxide-linux-x64-gnu": "latest",
     "@tailwindcss/oxide-linux-x64-musl": "latest",
-    "lightningcss-linux-x64-gnu": "latest",
-    "@img/sharp-linuxmusl-x64": "latest"
+    "lightningcss-linux-x64-gnu": "latest"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
