--- a/.github/workflows/build-and-deploy-backend.yml
+++ b/.github/workflows/build-and-deploy-backend.yml
@@ -136,9 +136,9 @@ jobs:
           go-version-file: go.mod
       - id: store-metabase-test-credentials
         if: ${{ inputs.notest != 'true' }}
-        env:
-          METABASE_ALL_USERS_SA_CREDS_JSON: ${{ secrets.METABASE_ALL_USERS_SA_CREDS_JSON }}
-        run: echo $METABASE_ALL_USERS_SA_CREDS_JSON > tests-metabase-all-users-sa-creds.json
+        run: |
+          echo "${{ secrets.METABASE_ALL_USERS_SA_CREDS_JSON }}" | base64 -d > tests-metabase-all-users-sa-creds.json && \
+            if [ ! -s tests-metabase-all-users-sa-creds.json ]; then echo "Error: Credentials file is empty" && exit 1; fi
       - id: run-tests
         if: ${{ inputs.notest != 'true' }}
         run: make test
